# computational-reproducibility

./: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  apt.txt  environment.yml  postBuild  pyproject.toml
.dockerfile/: Dockerfile.vscode
compose/: Dockerfile.code-server  README.md  compose.yml  extensions.sh
docs/: Makefile
docs/quarto/: slides.css  slides.qmd
docs/source/: conf.py  index.rst
docs/source/_sections/: containers_intro.rst  customizing_container_environments.rst  fundamentals.rst  managing_containers.rst
docs/source/_static/: custom.css
jupyter_vs_code_proxy/: __init__.py
